--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,9 @@
 }
 
 body{
+    background: url(/images/spirit.png);
+    background-position: bottom;
+    background-repeat: no-repeat;
     display: grid;
     gap: 20px;
    
@@ -53,14 +56,8 @@ body{
 
 }
 
-.img1
-{
-    
-    /* filter: var(--green, #c0f046); */
 
 
-    /* background: var(--green, #c0f046); */
-}
 
 .all .logo-nike img
 {
@@ -99,6 +96,9 @@ main {
     height: 100%;
     border-bottom: 1px solid #000000;
 }
+
+
+
 
 .product .first-pic
 {
@@ -226,19 +226,6 @@ color: white;
 }
 
 
-.spirit {
-
-    /* Placer l’image dans sa zone de grille */
-    grid-area: 1 / 2 / 2 / 13;
-    /* Couvrir tout l’espace disponible dans la zone */
-    height: 100%;
-    object-fit: contain;
-    /* Caler l’image en haut à droite de la zone */
-    object-position: top right;
-    width: 913px;
-    flex-shrink: 0;
-
-}
 
 
 /* -----------------------responsive -------------------------------- */
@@ -246,6 +233,11 @@ color: white;
 
 
 @media only screen and (max-width: 1024px) {
+
+    body
+    {
+        background-position: top;
+    }
 
     .all 
     {
@@ -284,6 +276,12 @@ color: white;
 
 
 @media only screen and (max-width: 800px) {
+    
+    body
+    {
+        background-position: left;
+    }
+
     .all {
         position: absolute;
         width: 100%;
@@ -306,12 +304,4 @@ color: white;
         margin-top: 20px;
     }
 
-    .spirit {
-    
-        object-position: bottom left;
-        height: 100vh;
-        width: 100%;
-
-        object-fit: contain;
-    }
 }
