--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ body{
     flex-direction: column;
     padding: 20px;
     border-right: 1px solid #333;
-    height: 100%;
+    height: 100vh;
 
    
 }
