--- a/css/style.css
+++ b/css/style.css
@@ -239,21 +239,16 @@ color: white;
         background-position: top;
     }
 
+ 
     .all 
     {
         flex-direction: row;
         justify-content: space-between;
-        align-items: center;
+        /* align-items: center; */
         height: auto;
-        position: fixed;
-        top: 0;
-        left: 0;
-        right: 0;
-        z-index: 1000;
+        position: absolute;
+        width: 100%;
         border-bottom: 1px solid #000000;
-        order: -1;
-        margin-bottom: 0
-
     }
 
     .all .logo
@@ -264,7 +259,7 @@ color: white;
 
     .all .logo img
     {
-         margin-right: 5px; 
+        margin-right: 5px; 
     }
 
     main
@@ -282,10 +277,10 @@ color: white;
         background-position: left;
     }
 
-    .all {
+    /* .all {
         position: absolute;
         width: 100%;
-    }
+    } */
 
     .all .logo {
         margin: auto 10px;
@@ -305,3 +300,4 @@ color: white;
     }
 
 }
+
